# src/dtos/despesa.output.dto.ts
@@ -1,0 +1,18 @@
+export interface DespesaOutputDto {
+    id: number;
+    uuid: string;
+    descricao: string;
+    valor: number;
+    data: Date;
+    categoria?: {
+        id: number;
+        uuid: string;
+        nome: string;
+    },
+    usuario?: {
+        id: number;
+        uuid: string;
+        nome: string;
+        email: string;
+    }
+}
